:art: refactor stock management system & fix test code