@@ -3,7 +3,6 @@ package com.abc.mart.order.usecase;
 import com.abc.mart.member.domain.Member;
 import com.abc.mart.order.domain.*;
 import com.abc.mart.order.domain.repository.OrderRepository;
-import com.abc.mart.order.usecase.dto.PartialOrderCancelRequest;
 import com.abc.mart.product.domain.Product;
 import com.abc.mart.product.domain.repository.ProductRepository;
 import org.junit.jupiter.api.Test;
@@ -13,9 +12,8 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 
+import static com.abc.mart.test.TestStubCreator.generateRandomStocks;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.anyBoolean;
-import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 
 class CancelOrderUsecaseTest {
@@ -33,26 +31,36 @@ class CancelOrderUsecaseTest {
         var price2 = 20000;
 
         var orderMemberId = "memberId";
-        var products = List.of(Product.of(productId1, "productName", price1, 10, true),
-                Product.of(productId2, "productName", price2, 5, true));
+        var product1Stocks = generateRandomStocks(15); // 재고 15개 생성
+        var product2Stocks = generateRandomStocks(10); // 재고 10개 생성
+
+        var products = List.of(
+                Product.of(productId1, "productName1", price1, product1Stocks, true),
+                Product.of(productId2, "productName2", price2, product2Stocks, true)
+        );
 
         var customer = Customer.from(Member.of(orderMemberId, "memberName", "email", "phoneNum"));
 
+        var orderItem1 = OrderItem.of(products.get(0), 10);
+        orderItem1.setStockIds(List.of("1","2", "3", "4", "5", "6", "7", "8", "9", "10"));
+
+        var orderItem2 = OrderItem.of(products.get(1), 5);
+        orderItem2.setStockIds(List.of("11","12","13","14","15"));
+
         var order = Order.createOrder(
-                List.of(OrderItem.of(products.getFirst(), 10), OrderItem.of(products.getLast(), 3)), customer
+                List.of(orderItem1, orderItem2), customer
         );
 
         var now = LocalDateTime.now();
         var orderId = OrderId.generate(orderMemberId, now);
         when(orderRepository.findById(orderId)).thenReturn(order);
-        when(productRepository.findByProductIdAndIsAvailable(productId1, true)).thenReturn(Optional.of(products.getFirst()));
-        when(productRepository.findByProductIdAndIsAvailable(productId2, true)).thenReturn(Optional.of(products.getLast()));
+        when(productRepository.findByProductIdAndIsAvailable(productId1, true)).thenReturn(Optional.of(products.get(0)));
+        when(productRepository.findByProductIdAndIsAvailable(productId2, true)).thenReturn(Optional.of(products.get(1)));
 
         //when
         var res = usecase.cancelOrder(orderId.id());
 
         //then
-        //재고 변경은 로그로 확인 가능
         assertEquals(OrderItemState.CANCELLED, res.getOrderItems().get(productId1).getOrderState());
         assertEquals(OrderItemState.CANCELLED, res.getOrderItems().get(productId2).getOrderState());
     }
